# multicall

./: .gitignore  Cargo.toml  README.md
src/: mock_querier.rs  msg.rs  querier.rs
